# SoftwareRasterizer

./: .gitignore  CMakeLists.txt  README.md
.clangd/index/: bemo.c.BA38BD0C632FFCC3.idx  bemo.h.61B93F1B93862237.idx  config.h.39FBE8C24F144188.idx  main.c.164AF4C3FC6FDB87.idx  minunit.h.80930456F23B2E6E.idx  rasterizer.c.76315FFD316B5599.idx  shader.c.7826B5609E486BA2.idx  smol.h.A3FF6FA3253BDAEF.idx  sre.c.CB611D777AE008F9.idx  sre.h.8865391809E82D69.idx  stb_image.h.6022B173DED93DBF.idx  test_objloader.c.EC6F24E4EFA0AD0A.idx  texturebuffer.c.E006055C2F762B59.idx  types.h.0101F7450F4EA6FA.idx
cmake/: config.h.in
docs/: interpolation_compare.xcf
include/: config.h  matrix.h  smol.h
include/glad/: glad.h
src/: CMakeLists.txt  colorbuffer.c  colorbuffer.h  config.h  config.h.in  glad.c  main.c  main.cpp  matrix.c  matrix.h  pipeline.cpp  pipeline.h  pixelbuffer.h  rasterizer.c  rasterizer.h  shader.c
src/bemo/: bemo.c  bemo.h
src/matrix/: matrix.c  matrix.h
src/smol/: README.md  matrix.c  matrix.h
src/sre/: assetloader.c  common.h  objloader.c  objloader.h  pipeline.c  pipeline.h  rasterizer.c  rasterizer.h  sre.c  sre.h  sreassl.c  sredefs.h  srerasterzer.c  sretexbuffer.c  sretypes.h  srmesh.c  srmesh.h  srmeshtypes.h  texturebuffer.c  texturebuffer.h  textureformat.h  types.h  vertexarray.c  vertexarray.h
src/sre/srmesh/: README.md  srmesh.c  srmesh.h
src/test/: CMakeLists.txt  test_objloader.c
test/: CMakeLists.txt  test_matrix.c  test_objloader.c
